[gd_scene load_steps=23 format=3 uid="uid://bdvo8jod3ovhd"]

[ext_resource type="Script" uid="uid://bm3wx7qiukpp0" path="res://Scripts/Interactables/SavePoint.gd" id="1_7ysoo"]
[ext_resource type="Texture2D" uid="uid://b762s8w2picqk" path="res://Assets/Tilesets/DARK Edition/Animated objects/Save/down 16x19.png" id="1_n57wy"]
[ext_resource type="Texture2D" uid="uid://byiycr1cf3idb" path="res://Assets/Tilesets/DARK Edition/Animated objects/Save/idle 16x19.png" id="2_7ysoo"]
[ext_resource type="Texture2D" uid="uid://ckijhv88bph13" path="res://Assets/Tilesets/DARK Edition/Animated objects/Save/start up16x19.png" id="3_qeqkf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d051l"]
atlas = ExtResource("1_n57wy")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_qakcy"]
atlas = ExtResource("1_n57wy")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o2wf"]
atlas = ExtResource("1_n57wy")
region = Rect2(32, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mm52"]
atlas = ExtResource("1_n57wy")
region = Rect2(48, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_yha53"]
atlas = ExtResource("2_7ysoo")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_n483t"]
atlas = ExtResource("2_7ysoo")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqvet"]
atlas = ExtResource("2_7ysoo")
region = Rect2(32, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_yihrx"]
atlas = ExtResource("2_7ysoo")
region = Rect2(48, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_upy4g"]
atlas = ExtResource("3_qeqkf")
region = Rect2(48, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_blt0h"]
atlas = ExtResource("3_qeqkf")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_c70wv"]
atlas = ExtResource("3_qeqkf")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh1aw"]
atlas = ExtResource("3_qeqkf")
region = Rect2(32, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnqwo"]
atlas = ExtResource("3_qeqkf")
region = Rect2(64, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ohml"]
atlas = ExtResource("3_qeqkf")
region = Rect2(80, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n055"]
atlas = ExtResource("3_qeqkf")
region = Rect2(96, 0, 16, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_nxvkt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d051l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qakcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o2wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mm52")
}],
"loop": false,
"name": &"Close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yha53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n483t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqvet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yihrx")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_upy4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blt0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c70wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh1aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upy4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnqwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ohml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n055")
}],
"loop": false,
"name": &"StartUp",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt5ix"]
size = Vector2(171, 94.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8m0g"]
size = Vector2(67, 36)

[node name="SavePoint" type="Node2D"]
script = ExtResource("1_7ysoo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_nxvkt")
animation = &"StartUp"

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(0, -37)
shape = SubResource("RectangleShape2D_dt5ix")
debug_color = Color(0, 0.62242, 0.546233, 0.42)

[node name="InteractionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_r8m0g")

[connection signal="body_entered" from="DetectionRange" to="." method="inDetectionRange"]
[connection signal="body_exited" from="DetectionRange" to="." method="leftDetectionRange"]
[connection signal="body_entered" from="InteractionRange" to="." method="inInteractionRange"]
[connection signal="body_exited" from="InteractionRange" to="." method="leftInteractionRange"]
